more changes to index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
    
 <header>
-<center><h1>THIYAGU UI DEVELOPER</h1></center>
+<center><h1>THIYAGU UI DEVELOPER and designer</h1></center>
 </header>
 
 <section>
