--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
    
 <header>
-<center><h1>THIYAGU UI DEVELOPER again changes 1and designer im modified</h1></center>
+<center><h1>THIYAGU UI DEVELOPER and designer im modified</h1></center>
 </header>
-<p>ptag inserted </p>
+
 <section>
 
 <div class="container">
