--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="jumbotron">
-        <h1 class="text-center">Lorem ipsum dolor sit amet, consectetur.</h1>
+        <h1 class="text-center">hello world is updated first version update</h1>
         <div class="row">
           <div class="col-lg-2 col-lg-offset-4 col-md-offset-4 col-md-2 col-sm-offset-3 col-sm-3 col-xs-offset-3 col-xs-3">
             <p><a class="btn btn-success btn-lg" href="#" role="button">FREE TRIAL</a> </p>
