changed master title and ingereidints

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bootstrap Product Page Template</title>
+<title>this is the master branch</title>
 
 <!-- Bootstrap -->
 <link rel="stylesheet" href="css/bootstrap.css">
@@ -28,8 +28,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a> </li>
-        <li><a href="#">Link</a> </li>
-        <li><a href="#">Link</a> </li>
+        <li><a href="#">ingeredints to add</a> </li>
+        <li><a href="#">bread n milk</a> </li>
         <li><a href="#">Link</a> </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
