--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a> </li>
         <li><a href="#">ingeredints to add</a> </li>
         <li><a href="#">bread n milk</a> </li>
-        <li><a href="#">Link</a> </li>
+        <li><a href="#">notes to be added</a> </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a> </li>
